# cosim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
ch/ch_04/: instr2  instr2.cpp  strtype1.cpp  structur  structur.cpp
config/: config.json
include/cosim/: osp_config_parser.hpp
public/: index.html
src/: main.cpp
test/: ch_04  ch_04.cpp
